--- a/style.css
+++ b/style.css
@@ -100,3 +100,5 @@ body {
   
   /* START BELOW THIS LINE */
   /* positon: static; */
+
+    /* My apologies, I spaced out and did not do the exercise below this line. PLease find my answers above. */
